testdata/zkc/invalid/ternary_06.zkc
//error:4:24-37:ternary expressions are not yet supported inside for condition
fn main() {
    var n:u8 = 10
    for i:u8 = 0; i < (n > 5 ? 6 : n); i = i + 1 {
    }
}
